book/tests/snapshots/snapshot__run_display_reference_prql@examples__employees-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/examples/employees-1.prql
---
from e = employees
join salaries [==emp_no]
group [
  e.emp_no,
  e.gender,
] (
  aggregate [emp_salary = average salary]
)
join side:left de = dept_emp [==emp_no]
group [
  de.dept_no,
  gender,
] (
  aggregate [
  salary_avg = average emp_salary,
  salary_sd = stddev emp_salary,
]
)
join departments [==dept_no]
select [
  dept_name,
  gender,
  salary_avg,
  salary_sd,
]



