book/tests/snapshots/snapshot__run_display_reference_prql@examples__list-equivalence-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/examples/list-equivalence-0.prql
---
from employees
select salary



