book/tests/snapshots/snapshot__run_display_reference_prql@examples__list-equivalence-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/examples/list-equivalence-1.prql
---
from employees
select [salary]



