book/tests/snapshots/snapshot__run_display_reference_prql@examples__misc-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/examples/misc-0.prql
---
let parts = (
  from seq_1_to_5
)



from pl = prospect_lists_prospects
filter prospect_list_id == "cc675eee-8bd1-237f-be5e-622ba511d65e"
join a = accounts [a.id == pl.related_id]
join er = email_addr_bean_rel [er.bean_id == a.id and er.primary_address == "1"]
join ea = email_addresses [ea.id == er.email_address_id]
select ea.email_address
derive prefix = s"regexp_replace(SUBSTRING_INDEX({email_address}, '@', 1), '[.0-9-_:]+', '.')"
derive stub = s"SUBSTRING_INDEX(SUBSTRING_INDEX({prefix}, '.', part), '.', -1)"
select [
  email_address,
  stub,
]



